--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,33 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rentora</title>
-</head>
+<% layout("/layouts/boilerplate.ejs") %>
 <body>
-    <h3>Edit listing</h3>
-    <form action="/listings/<%= listing._id %>?_method=PUT" method="POST">
-        <label for="listing[title]">Title</label>
-        <input type="text" name="listing[title]" value="<%= listing.title %>" placeholder="Enter title"><br><br>
+    <div class="row">
+        <div class="col-8 offset-2">
+        <h3>Edit listing</h3>
+            <form action="/listings/<%= listing._id %>?_method=PUT" method="POST">
+                <div class="mb-3">
+                        <label for="title" class="form-label">Title</label>
+                        <input type="text" name="listing[title]" value="<%=listing.title %>" class="form-control">
+                </div>
 
-        <label for="listing[description]">Description</label>
-        <input type="text" name="listing[description]" value="<%= listing.description %>" placeholder="Enter Description"><br><br>
+                <div class="mb-3">
+                    <label for="description" class="form-label">Description</label>
+                    <textarea name="listing[description]" class="form-control"><%=listing.description%></textarea>
+                </div>
+            
+                <div class="mb-3">
+                    <label for="image" class="form-label">Image</label>
+                    <input type="text" name="listing[image][url]" value="<%=listing.image.url %>" class="form-control">
+                </div>
 
-        <label for="listing[image]">Image</label>
-        <input type="text" name="listing[image]" value="<%= listing.image %>" placeholder="Enter Image-URL"><br><br>
+                <div class="row">
+                    <div class="mb-3 col-md-4">
+                        <label for="price" class="form-label">Price</label>
+                        <input type="number" name="listing[price]" value="<%=listing.price %>" class="form-control">       
+                    </div>
+                
+                    <div class="mb-3 col-md-8">
+                        <label for="location" class="form-label">Location</label>
+                        <input type="text" name="listing[location]" value="<%=listing.location %>" class="form-control">        
+                    </div>                    
+                </div>
 
-        <label for="listing[price]">Price</label>
-        <input type="number" name="listing[price]" value="<%= listing.price %>" placeholder="Enter Price"><br><br>
+                <div class="mb-3">
+                    <label for="country" class="form-label">Country</label>
+                    <input type="text" name="listing[country]" value="<%=listing.country %>" class="form-control">           
+                </div>
 
-        <label for="listing[location]">Location</label>
-        <input type="text" name="listing[location]" value="<%= listing.location %>" placeholder="Enter location"><br><br>
+                <button class="btn btn-dark edit-btn">Edit</button><br><br>
 
-        <label for="listing[country]">Country</label>
-        <input type="text" name="listing[country]" value="<%= listing.country %>" placeholder="Enter country"><br><br>
-
-        <button type="submit">Edit</button>
-
-    </form>
+            </form>
+        </div>
+    </div>
 </body>
-</html>
