Client-Server Validations done | Implementing Error handling Middlewares , Handling Async Error using wrapAsync and creating Custome Errors.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,6 +45,7 @@ body{
     justify-content: center;
     align-items: space-evenly;
     text-align: center;
+
 }
 
 
@@ -268,4 +269,7 @@ body{
     margin: auto;
   }
 }
+
+
+/* Show Page */
 
