--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -3,37 +3,47 @@
     <div class="row">
         <div class="col-8 offset-2">
         <h3>Edit listing</h3>
-            <form action="/listings/<%= listing._id %>?_method=PUT" method="POST">
+            <form action="/listings/<%= listing._id %>?_method=PUT" method="POST" class="needs-validation" novalidate>
                 <div class="mb-3">
                         <label for="title" class="form-label">Title</label>
-                        <input type="text" name="listing[title]" value="<%=listing.title %>" class="form-control">
+                        <input type="text" name="listing[title]" value="<%=listing.title %>" class="form-control" required>
+                        <div class="valid-feedback">Title looks good!</div>
+                        <div class="invalid-feedback">Title must be 3 characters long.</div>
                 </div>
 
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
-                    <textarea name="listing[description]" class="form-control"><%=listing.description%></textarea>
+                    <textarea name="listing[description]" class="form-control" required><%=listing.description%></textarea>
+                    <div class="valid-feedback">Nice description-gives enough details</div>
+                    <div class="invalid-feedback">Description is required</div>
                 </div>
             
                 <div class="mb-3">
                     <label for="image" class="form-label">Image</label>
-                    <input type="text" name="listing[image][url]" value="<%=listing.image.url %>" class="form-control">
+                    <input type="text" name="listing[image][url]" value="<%=listing.image.url %>" class="form-control" required>
                 </div>
 
                 <div class="row">
                     <div class="mb-3 col-md-4">
                         <label for="price" class="form-label">Price</label>
-                        <input type="number" name="listing[price]" value="<%=listing.price %>" class="form-control">       
+                        <input type="number" name="listing[price]" value="<%=listing.price %>" class="form-control" required>  
+                        <div class="valid-feedback">Valid </div>
+                        <div class="invalid-feedback">Price is required.</div>       
                     </div>
                 
                     <div class="mb-3 col-md-8">
                         <label for="location" class="form-label">Location</label>
-                        <input type="text" name="listing[location]" value="<%=listing.location %>" class="form-control">        
+                        <input type="text" name="listing[location]" value="<%=listing.location %>" class="form-control" required> 
+                        <div class="valid-feedback">Location Added!</div>
+                        <div class="invalid-feedback">Location is required.</div>         
                     </div>                    
                 </div>
 
                 <div class="mb-3">
                     <label for="country" class="form-label">Country</label>
-                    <input type="text" name="listing[country]" value="<%=listing.country %>" class="form-control">           
+                    <input type="text" name="listing[country]" value="<%=listing.country %>" class="form-control" required>
+                    <div class="valid-feedback">Country name valid.</div>
+                    <div class="invalid-feedback">Country name invalid</div>             
                 </div>
 
                 <button class="btn btn-dark edit-btn">Edit</button><br><br>
