--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -4,15 +4,19 @@
         <div class="col-8 offset-2"><br>
 
             <h3>Create new listing</h3>
-            <form action="/listings" method="POST">
+            <form action="/listings" method="POST" class="needs-validation" novalidate>
                 <div class="mb-3">
                     <label for="title" class="form-label">Title</label>
-                    <input type="text" name="listing[title]" placeholder="Add a catchy title ... " class="form-control">
+                    <input type="text" name="listing[title]" placeholder="Add a catchy title ... " class="form-control" required>
+                    <div class="valid-feedback">Title looks good!</div>
+                    <div class="invalid-feedback">Title must be 3 characters long.</div>
                 </div>
             
                 <div class="mb-3">
                     <label for="description" class="form-label">Description</label>
-                    <textarea name="listing[description]" placeholder="Description about your service" class="form-control"></textarea>
+                    <textarea name="listing[description]" placeholder="Description about your service" class="form-control" required></textarea>
+                    <div class="valid-feedback">Nice description-gives enough details</div>
+                    <div class="invalid-feedback">Description is required</div>
                 </div>
             
                 <div class="mb-3">
@@ -23,18 +27,23 @@
                 <div class="row">
                     <div class="mb-3 col-md-4">
                         <label for="listing[price]" class="form-label">Price</label>
-                        <input type="number" name="listing[price]" placeholder="1299" class="form-control">       
+                        <input name="listing[price]" placeholder="1299" class="form-control" required> 
+                        <div class="invalid-feedback">Price is required.</div>      
                     </div>
                 
                     <div class="mb-3 col-md-8">
                         <label for="listing[location]" class="form-label">Location</label>
-                        <input type="text" name="listing[location]" placeholder="Enter location" class="form-control">        
+                        <input type="text" name="listing[location]" placeholder="Enter location" class="form-control" required>
+                        <div class="valid-feedback">Location Added!</div>
+                        <div class="invalid-feedback">Location is required.</div>        
                     </div>                    
                 </div>
             
                 <div class="mb-3">
                     <label for="listing[country]" class="form-label">Country</label>
-                    <input type="text" name="listing[country]" placeholder="India" class="form-control">           
+                    <input type="text" name="listing[country]" placeholder="India" class="form-control" required>
+                    <div class="valid-feedback">Country name valid.</div>
+                    <div class="invalid-feedback">Country name invalid</div>           
                 </div>
             
                 <button class="btn btn-dark add-btn">Add</button><br><br>
