--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -112,7 +112,7 @@ body {
 </nav> -->
 <nav class="navbar navbar-expand-lg bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><i class="fa-regular fa-compass" style="color: #ff0011f6;"></i></a>
+    <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass" style="color: #ff0011f6;"></i></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
       <span class="navbar-toggler-icon"></span>
     </button>
