--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -27,7 +27,7 @@
                 <div class="row">
                     <div class="mb-3 col-md-4">
                         <label for="listing[price]" class="form-label">Price</label>
-                        <input name="listing[price]" placeholder="1299" class="form-control" required> 
+                        <input type="number" name="listing[price]" placeholder="1299" class="form-control" required> 
                         <div class="invalid-feedback">Price is required.</div>      
                     </div>
                 
